--- a/style.css
+++ b/style.css
@@ -14,3 +14,14 @@ main {
     display: flex;
     flex-direction: column;
 }
+
+#convert-btn {
+    background-color: #00b4d8;
+    border: none;
+    border-radius: 3px;
+    font-family: 'Roboto Condensed';
+    font-size: 16px;
+    font-weight: 500;
+    height: 40px;
+    width: 70px;
+}
